# matsuzawa-20260219-2

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-1-gsm8k.yaml  comparative-2-gsm8k.yaml  proposed-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py  train.py
